Mitigate header layout mis-alignment issue

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    padding: 16px 108px 108px;
+    padding: 16px min(5.5vw, 108px) 108px;
     background-color: #1F2937;
     font-family: roboto;
     font-size: 24px;
